@@ -1,4 +1,0 @@
-<?xml version="1.0"?>
-<object name="portal_css">
-
-</object>
