@@ -4,6 +4,8 @@ Changelog
 1.0.1 - unreleased
 ------------------
 
+- Removed remaining references to empty ``sunburst_js`` folder.
+  [hannosch]
 
 1.0 - 2010-07-07
 ----------------
